--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
+<!DOCTYPE html>
+<html >
+<head>
+  <meta charset="UTF-8">
+  <title>Pomodoro timer</title>
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
- <!doctype html>
-<html> 
+  
+      <link rel="stylesheet" href="css/style.css">
 
-<head> 
-         <link rel="stylesheet" href="style.css">
-<!--         <script src="https://code.jquery.com/jquery-3.1.1.min.js"> </script>-->
-         <script src="script.js"> </script>
+  
+</head>
 
- </head>
-
- <div class="wrapper">
+<body>
+  <div class="wrapper">
 
   <div class="settings">
 
@@ -30,9 +34,12 @@
   </div>
 
   <div class="timer">
-    <h2 class="mode">Click</h2>
+    <h2 class="mode"> <br> Start <br> Timer </h2>
     <p class="countdown"></p>
   </div>
 </div>
+  
+    <script  src="js/index.js"></script>
 
+</body>
 </html>
