--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
 <body>
   <div class="wrapper">
 
+
+  <div class="timer">
+    <h2 class="mode"> <br> Start <br> Timer </h2>
+    <p class="countdown"></p>
+  </div>
   <div class="settings">
 
-    <div class="break">
+    <div class="break brcolor">
       <h3>Break</h3>
       <button data-change="-1" data-which="break">-</button>
       <p class="time" contenteditable="true">5</p>
       <button data-change="+1" data-which="break">+</button>
     </div>
 
-    <div class="work">
+    <div class="work wkcolor">
       <h3>Work</h3>
-      <button data-change="-1" data-which="work">-</button>
+      <button   data-change="-1" data-which="work">-</button>
       <p class="time" contenteditable="true">25</p>
       <button data-change="+1" data-which="work">+</button>
     </div>
 
-  </div>
-
-  <div class="timer">
-    <h2 class="mode"> <br> Start <br> Timer </h2>
-    <p class="countdown"></p>
   </div>
 </div>
   
